@@ -353,7 +353,7 @@ div#top-navigation-menu {clear: both;}
 .nav-menu a, .nav-menu a:visited {
 	color: #84500e;
 	display: block;
-	padding: 18px 12px;
+	padding: 20px 12px;
 }
 .nav-menu a:hover, .nav-menu a:active {
 	color: #D21600;
